# polars-bench

./: .replit  main.py  pyproject.toml  replit.md  requirements.txt
data/: benchmark_aggregations.json  benchmark_filters.json  benchmark_full_pipeline.json  benchmark_joins.json  benchmark_window_functions.json
